--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
   "name": "@muhaca/pkg-custom-form",
+  "version": "0.0.1",
+  "description": "A Simple Custom form",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
+  "keywords": [],
+  "author": "Muhamad Casdi",
+  "license": "ISC",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/muhaca"
   },
-  "version": "0.0.1",
-  "description": "A Simple Custom form",
   "scripts": {
     "rollup": "rollup -c"
   },
-  "author": "Muhamad Casdi",
-  "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rollup": "^4.21.0",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^3.4.10",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
   "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "rollup-plugin-postcss": "^4.0.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-  }
+    "dist",
+    "src/styles/tailwind.css"
+  ]
 }
